hello-istio.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  labels:
    app: hello-node
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: hello-node
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-node-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-node
        version: v1
    spec:
      containers:
      - name: hello-node
        image: hello-node:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hello-py
  labels:
    app: hello-py
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: hello-py
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-py-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-py
        version: v1
    spec:
      containers:
      - name: hello-py
        image: hello-py:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-py
          servicePort: 9080
---
